--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -11,11 +11,12 @@ body{
   height: 80px;
   width: 80px;
   border-radius: 50%;
+  border: none;
   background-color: #ffff;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 60px;
 }
 #icon-in{
   height: 40px;
@@ -26,6 +27,7 @@ body{
   width: 631px;
   display: flex;
   gap: 20px;
+  margin-top: 60px;
 }
 
 #profile-pic{
@@ -151,4 +153,27 @@ body{
 #section5{
   height: 826px;
   width: 757px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+#section5-row{
+  display: flex;
+  justify-content: space-between;
+}
+
+.section5-box{
+  height: 226px;
+  width: 362px;
+  
+}
+
+#footer{
+  height: 33px;
+  width: 463px;
+  text-align: center;
+  font-size: 22px;
 }
