--- a/portfolio/portfolio-lightTheme.css
+++ b/portfolio/portfolio-lightTheme.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 60px;
 }
 
 #icon-container {
@@ -49,7 +50,6 @@ body {
   width: 631px;
   display: flex;
   gap: 20px;
-  margin-top: 60px;
 }
 
 #profile-pic {
@@ -64,7 +64,7 @@ body {
 }
 
 #img {
-  max-width: 90%;
+  max-width: 100%;
   height: 90%;
   border-radius: 50%;
 }
@@ -73,7 +73,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 10px;
 }
 
 #profile-right-name {
@@ -253,6 +252,10 @@ p {
     height: 48px;
     width: 48px;
   }
+  .icon-svg {
+    height: 24px;
+    width: 24px;
+  }
   #profile {
     display: flex;
     flex-direction: column;
@@ -265,6 +268,11 @@ p {
     align-items: center;
     gap: 10px;
   }
+  #profile-pic {
+    height: 124px;
+    width: 124px;
+  }
+
   #section2 {
     height: 106px;
     width: 375px;
