--- a/portfolio/portfolio-lightTheme.css
+++ b/portfolio/portfolio-lightTheme.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 60px;
 }
 
@@ -92,10 +93,8 @@ body {
   height: 142px;
   width: 634px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 90px;
-  margin-top: 40px;
 }
 
 #text-box1 {
@@ -200,6 +199,12 @@ p {
   position: relative;
 }
 
+.section5-img {
+  height: 226px;
+  width: 362px;
+  border-radius: 15px;
+}
+
 .test {
   position: absolute;
   top: 0;
@@ -216,6 +221,7 @@ p {
   color: var(--text-color);
   font-size: 22px;
   text-align: center;
+  gap: 10px;
 }
 
 .test:hover {
@@ -225,7 +231,7 @@ p {
   font-size: 14px;
 }
 
-#test-button {
+.test-button {
   height: 38px;
   width: 38px;
   border: none;
@@ -241,6 +247,13 @@ p {
 }
 
 @media only screen and (max-width: 620px) {
+  body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   #icon-container {
     height: 48px;
     width: 48px;
@@ -250,6 +263,7 @@ p {
     width: 24px;
   }
   #profile {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -259,22 +273,37 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 12px;
   }
+  #profile-right-name {
+    font-size: 32px;
+    line-height: 48px;
+  }
+
+  #profile-right-occ {
+    font-size: 14px;
+    line-height: 21px;
+    margin: 0;
+  }
+
   #profile-pic {
     height: 124px;
     width: 124px;
   }
 
   #section2 {
-    height: 106px;
-    width: 375px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 90px;
+    width: 300px;
+    justify-content: space-between;
     margin-top: 40px;
+    text-align: center;
   }
+
+  #section2 p {
+    font-size: 14px;
+    line-height: 21px;
+  }
+
   #section3 {
     height: 44px;
     width: 375px;
@@ -326,5 +355,9 @@ p {
   .section5-box {
     height: 210px;
     width: 340px;
+  }
+  #footer {
+    width: 295px;
+    font-size: 14px;
   }
 }
