fixed download button

--- a/portfolio/portfolio-lightTheme.css
+++ b/portfolio/portfolio-lightTheme.css
@@ -95,6 +95,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
+}
+a {
+  text-decoration: none;
 }
 
 #text-box1 {
